--- a/NativeMemory/NativeMemory.csproj
+++ b/NativeMemory/NativeMemory.csproj
@@ -12,6 +12,12 @@
 
     <ItemGroup>
         <PackageReference Include="NoParamlessCtor" Version="1.1.1-alpha.31.cb558c4" />
+        <PackageReference Include="System.Numerics.Tensors" Version="10.0.0-preview.5.25277.114" />
     </ItemGroup>
+
+    <PropertyGroup>
+        <!-- Suppress warnings about using experimental feature -->
+        <NoWarn>SYSLIB5001</NoWarn>
+    </PropertyGroup>
 
 </Project>
